--- a/test.html
+++ b/test.html
@@ -1,3 +1,3 @@
 <h1>--THIS IS GIT TEST V1--</h1>
 <h2>--THIS IS GIT TEST V2 V2--</h2>
-<h2>--THIS IS GIT TEST V3 V3 V3--</h2>
+<h2>--THIS IS GIT TEST V3 V3 V3 修复BUG--</h2>
